--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,14 @@
 ---
 title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+excerpt: "Oops! Looks like you've reached a page that doesn't exist."
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+<p>Sorry, but the page you were trying to view does not exist. It seems like you've encountered an error while navigating through the site.</p>
+
+<p>As a <strong>Network Security Specialist</strong>, I ensure that everything is secure and running smoothly. However, it seems like this page slipped through the cracks!</p>
+
+<p>If you're looking for something specific, feel free to reach out via the <a href="/contact/">contact page</a>, or head back to the <a href="/">home page</a> to explore my projects and certifications in Network Security.</p>
+
+<p>Stay secure!</p>
